--- a/style.css
+++ b/style.css
@@ -275,14 +275,27 @@ body {
         text-shadow: 0 0 0 transparent;
         filter: blur(0px);
     }
-    }
-    .btn-primary:hover,
-    .btn-register:hover {
-      background-color: #800080; /* mor */
-      border-color: #800080;
-      color: white;
-    }
-    .mor-outline {
-      outline: 2px solid #800080;
-      outline-offset: 2px;
-    }
+}
+
+.btn-primary:hover,
+.btn-register:hover {
+  background-color: #800080; /* mor */
+  border-color: #800080;
+  color: white;
+}
+
+.mor-outline {
+  outline: 2px solid #800080;
+  outline-offset: 2px;
+}
+
+.input-group.error {
+    border: 1px solid red;
+}
+
+.error-message {
+    color: red;
+    font-size: 0.8rem;
+    margin-top: 5px;
+    text-align: left;
+}
